--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
 @import "tailwindcss";
 
 @theme {
@@ -5,8 +9,19 @@
   --font-roboto: "Roboto", sans-serif;
 
   --breakpoint-1000px: 1050px;
-  --breakpoints-1100px: 1110px;
+  --breakpoint-1100px: 1110px;
   --breakpoint-800px: 800px;
   --breakpoint-1300px: 1300px;
   --breakpoint-400px: 400px;
+}
+
+body {
+  font-family: Roboto, sans-serif;
+  scroll-behavior: smooth;
+  user-select: none;
+}
+
+input,
+select {
+  outline: none;
 }
